# smw_2026

./: CMakeLists.txt  package.xml
include/smw_2026/: C01_deconing_waypoints.hpp  C04_deconing_waypoints.hpp  Global_waypoints.hpp  S01_deconing_waypoints.hpp  S03_deconing_waypoints.hpp
launch/: launch_stuff.launch.py
scripts/: get_exp.py
src/: C01_deconing_waypoints.hpp  C04_deconing.cpp  C04_deconing_waypoints.hpp  CO1_deconing.cpp  S01_deconing.cpp  S03_deconing.cpp  perception_proxy_node.cpp  perception_proxy_server.cpp  tcp_server.cpp  test_perception.cpp
