<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smw_2026</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vrv278@gmail.com">barracuda</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>sut06_dual_arm_workcell_bringup</depend>
  <depend>motion_planning_abstractions</depend>
  <depend>motion_planning_abstractions_msgs</depend>

  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_servo</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>trajectory_msgs</depend>
  <depend>ur_msgs</depend>

  <depend>rosidl_runtime_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
